[Improvement] (server) Refactor command api for service level